Utworzono za pomocą Colab

--- a/praca_domowa6.ipynb
+++ b/praca_domowa6.ipynb
@@ -123,7 +123,7 @@
         "id": "riXsgF53_dk9"
       },
       "id": "riXsgF53_dk9",
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -142,7 +142,7 @@
         "id": "VdB6Jgt8-kr4"
       },
       "id": "VdB6Jgt8-kr4",
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -190,7 +190,7 @@
         "id": "SK1fp56rCS9f"
       },
       "id": "SK1fp56rCS9f",
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -219,7 +219,7 @@
         }
       },
       "id": "2ocbVyLqBCEA",
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -750,7 +750,7 @@
         "id": "FKqmV1gzoF7a"
       },
       "id": "FKqmV1gzoF7a",
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -879,7 +879,7 @@
         }
       },
       "id": "padI0sMirJXW",
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -910,7 +910,7 @@
         }
       },
       "id": "VzxdVySamznv",
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -987,6 +987,20 @@
         "id": "VdE9xSAM-sbe"
       },
       "id": "VdE9xSAM-sbe",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in range(2, 6):\n",
+        "    tree = build_tree_total_rss(X_train, y_train, max_depth=i)\n",
+        "    y_pred = predict(X_test, tree)"
+      ],
+      "metadata": {
+        "id": "141Y_ymJBXXO"
+      },
+      "id": "141Y_ymJBXXO",
       "execution_count": null,
       "outputs": []
     }
