Utworzono za pomocą Colab

--- a/praca_domowa6.ipynb
+++ b/praca_domowa6.ipynb
@@ -148,35 +148,6 @@
     {
       "cell_type": "code",
       "source": [
-        "nr_of_houses"
-      ],
-      "metadata": {
-        "id": "Ec_5nOv0qe9R",
-        "outputId": "fee6ad15-576f-421a-ae59-b1d773dc5f07",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "id": "Ec_5nOv0qe9R",
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([2., 2., 1., 1., 3., 2., 2., 2., 2., 1., 1., 3., 3., 2., 1., 4., 1.,\n",
-              "       5., 1., 1., 3., 1., 2., 1., 3., 1., 2., 1., 4., 2., 1., 1., 1., 3.,\n",
-              "       3., 2., 1., 2., 1., 2., 4., 1., 5., 1., 2., 1., 1., 3., 2., 3.])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 38
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "df = pd.DataFrame({\n",
         "    'Age': ages,\n",
         "    'Income': incomes,\n",
@@ -756,22 +727,6 @@
     {
       "cell_type": "code",
       "source": [
-        "X_train.shape, y_train.shape, X_test.shape, y_test.shape\n",
-        "from sklearn.preprocessing import StandardScaler\n",
-        "scaler = StandardScaler()\n",
-        "X_train = scaler.fit_transform(X_train)\n",
-        "X_test = scaler.transform(X_test)"
-      ],
-      "metadata": {
-        "id": "ZpbkjiEKtgZd"
-      },
-      "id": "ZpbkjiEKtgZd",
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "tree = build_tree_rss_gain(X_train, y_train, max_depth=2)\n",
         "y_pred = predict(X_test, tree)\n",
         "mse = mean_squared_error(y_test, y_pred)\n",
@@ -863,39 +818,6 @@
     {
       "cell_type": "code",
       "source": [
-        "from sklearn.tree import DecisionTreeRegressor\n",
-        "\n",
-        "drzewo_local_rss = DecisionTreeRegressor(max_depth=4)\n",
-        "drzewo_local_rss.fit(X_train, y_train)\n",
-        "y_pred =drzewo_local_rss.predict(X_test)\n",
-        "mse = mean_squared_error(y_test, y_pred)\n",
-        "round(mse**(1/2), 0)"
-      ],
-      "metadata": {
-        "id": "padI0sMirJXW",
-        "outputId": "2c0ba003-f96a-454c-c81c-90336240b231",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "id": "padI0sMirJXW",
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "97922.0"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 74
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "tree = build_tree_total_rss(X_train, y_train, max_depth=4)\n",
         "y_pred = predict(X_test, tree)\n",
         "\n",
@@ -979,28 +901,56 @@
     {
       "cell_type": "code",
       "source": [
-        "wyniki_gain= [i for i in range(2, 6)]\n",
-        "wyniki_local_rss= [i for i in range(2, 6)]\n",
-        "wyniki_total_rss= [i for i in range(2, 6)]"
+        "wyniki_gain= [[i,i] for i in range(2, 6)]\n",
+        "wyniki_local_rss= [[i,i] for i in range(2, 6)]\n",
+        "wyniki_total_rss= [[i,i] for i in range(2, 6)]\n",
+        "for i in range(2, 6):\n",
+        "    tree_total = build_tree_total_rss(X_train, y_train, max_depth=i)\n",
+        "    y_pred = predict(X_test, tree)\n",
+        "    wyniki_total_rss[i] = [mean_squared_error(y_test, y_pred)**(1/2), np.var(y_pred)]\n",
+        "\n",
+        "    tree_gain = build_tree_rss_gain(X_train, y_train, max_depth=i)\n",
+        "    y_pred_gain = predict(X_test, tree_gain)\n",
+        "    wyniki_gain[i] = [mean_squared_error(y_test, y_pred_gain)**(1/2), np.var(y_pred_gain)]\n",
+        "\n",
+        "    tree_local_rss = DecisionTreeRegressor(max_depth=4)\n",
+        "    tree_local_rss.fit(X_train, y_train)\n",
+        "    y_pred =tree_local_rss.predict(X_test)\n",
+        "    wyniki_local_rss[i] = [mean_squared_error(y_test, y_pred)**(1/2), np.var(y_pred)]"
       ],
       "metadata": {
-        "id": "VdE9xSAM-sbe"
+        "id": "141Y_ymJBXXO",
+        "outputId": "bc6c06fc-d8d1-4520-d421-113bcb4bf10f",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 211
+        }
       },
-      "id": "VdE9xSAM-sbe",
-      "execution_count": null,
-      "outputs": []
+      "id": "141Y_ymJBXXO",
+      "execution_count": 77,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "IndexError",
+          "evalue": "list assignment index out of range",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-77-736bf45cb2e6>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mtree_total\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbuild_tree_total_rss\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmax_depth\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0my_pred\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtree\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m     \u001b[0mwyniki_total_rss\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mmean_squared_error\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_pred\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvar\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_pred\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[0mtree_gain\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbuild_tree_rss_gain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmax_depth\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mIndexError\u001b[0m: list assignment index out of range"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        "for i in range(2, 6):\n",
-        "    tree = build_tree_total_rss(X_train, y_train, max_depth=i)\n",
-        "    y_pred = predict(X_test, tree)"
+        "im"
       ],
       "metadata": {
-        "id": "141Y_ymJBXXO"
+        "id": "k-rdyx9AFi6A"
       },
-      "id": "141Y_ymJBXXO",
+      "id": "k-rdyx9AFi6A",
       "execution_count": null,
       "outputs": []
     }
@@ -1008,6 +958,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "language_info": {
